src/main/antlr4/main/antlr4/YuriParser.java
package main.antlr4;
// Generated from Yuri.g4 by ANTLR 4.4
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class YuriParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INT=1, FLOAT=2, CHAR=3, STRING=4, GLOBAL=5, PLUS=6, MINUS=7, STAR=8, DIV=9, 
		MOD=10, AND=11, OR=12, NOT=13, INIT=14, END=15, MAIN=16, IMPORT=17, OPENPAR=18, 
		CLOSEPAR=19, DOT=20, COLON=21, COMMA=22, LT=23, GT=24, EQ=25, NE=26, LE=27, 
		GE=28, IFINIT=29, IFEND=30, THEN=31, ELSE=32, WHILEINIT=33, WHILEEND=34, 
		FORINIT=35, FOREND=36, SWITCHINIT=37, SWITCHEND=38, CASE=39, DEFAULT=40, 
		DIG=41, NAME=42, LIB=43, WHITESPACE=44, NEWLINE=45, COMMENT=46;
	public static final String[] tokenNames = {
		"<INVALID>", "'Inteiro'", "'Real'", "'Caractere'", "'Cadeia'", "'Global'", 
		"'+'", "'-'", "'*'", "'/'", "'%'", "AND", "OR", "NOT", "'Inicio'", "'Fim'", 
		"'Principal'", "'Importar'", "'('", "')'", "'.'", "':'", "','", "'<'", 
		"'>'", "'='", "'!='", "'<='", "'>='", "'Se'", "'FimSe'", "THEN", "ELSE", 
		"'Enquanto'", "'FimEnquanto'", "'Para'", "'FimPara'", "'Seja'", "'FimSeja'", 
		"'Caso'", "DEFAULT", "DIG", "NAME", "LIB", "WHITESPACE", "NEWLINE", "COMMENT"
	};
	public static final int
		RULE_include = 0, RULE_programName = 1, RULE_stmtList = 2, RULE_stmt = 3, 
		RULE_assignStmt = 4, RULE_declareStmt = 5, RULE_varType = 6, RULE_expr = 7, 
		RULE_callExpr = 8, RULE_arithExpr = 9, RULE_exprCond = 10, RULE_exprList = 11, 
		RULE_exprListEnd = 12, RULE_ifStmt = 13, RULE_elseStmt = 14, RULE_whileStmt = 15, 
		RULE_switchStmt = 16, RULE_switchBody = 17, RULE_forStmt = 18, RULE_compareSymbols = 19, 
		RULE_arithSymbols = 20;
	public static final String[] ruleNames = {
		"include", "programName", "stmtList", "stmt", "assignStmt", "declareStmt", 
		"varType", "expr", "callExpr", "arithExpr", "exprCond", "exprList", "exprListEnd", 
		"ifStmt", "elseStmt", "whileStmt", "switchStmt", "switchBody", "forStmt", 
		"compareSymbols", "arithSymbols"
	};

	@Override
	public String getGrammarFileName() { return "Yuri.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public YuriParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class IncludeContext extends ParserRuleContext {
		public TerminalNode LIB() { return getToken(YuriParser.LIB, 0); }
		public TerminalNode LT() { return getToken(YuriParser.LT, 0); }
		public TerminalNode IMPORT() { return getToken(YuriParser.IMPORT, 0); }
		public TerminalNode GT() { return getToken(YuriParser.GT, 0); }
		public IncludeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_include; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YuriListener ) ((YuriListener)listener).enterInclude(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YuriListener ) ((YuriListener)listener).exitInclude(this);
		}
	}

	public final IncludeContext include() throws RecognitionException {
		IncludeContext _localctx = new IncludeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_include);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42); match(IMPORT);
			setState(43); match(LT);
			setState(44); match(LIB);
			setState(45); match(GT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramNameContext extends ParserRuleContext {
		public TerminalNode INIT() { return getToken(YuriParser.INIT, 0); }
		public TerminalNode OPENPAR() { return getToken(YuriParser.OPENPAR, 0); }
		public TerminalNode CLOSEPAR() { return getToken(YuriParser.CLOSEPAR, 0); }
		public TerminalNode MAIN() { return getToken(YuriParser.MAIN, 0); }
		public ProgramNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YuriListener ) ((YuriListener)listener).enterProgramName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YuriListener ) ((YuriListener)listener).exitProgramName(this);
		}
	}

	public final ProgramNameContext programName() throws RecognitionException {
		ProgramNameContext _localctx = new ProgramNameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47); match(INIT);
			setState(48); match(MAIN);
			setState(49); match(OPENPAR);
			setState(50); match(CLOSEPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtListContext extends ParserRuleContext {
		public StmtListContext stmtList() {
			return getRuleContext(StmtListContext.class,0);
		}
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public StmtListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmtList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YuriListener ) ((YuriListener)listener).enterStmtList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YuriListener ) ((YuriListener)listener).exitStmtList(this);
		}
	}

	public final StmtListContext stmtList() throws RecognitionException {
		StmtListContext _localctx = new StmtListContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stmtList);
		try {
			setState(56);
			switch (_input.LA(1)) {
			case INT:
			case FLOAT:
			case CHAR:
			case STRING:
			case IFINIT:
			case WHILEINIT:
			case FORINIT:
			case SWITCHINIT:
			case NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(52); stmt();
				setState(53); stmtList();
				}
				break;
			case IFEND:
			case ELSE:
			case WHILEEND:
			case FOREND:
			case SWITCHEND:
			case CASE:
			case DEFAULT:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public ForStmtContext forStmt() {
			return getRuleContext(ForStmtContext.class,0);
		}
		public IfStmtContext ifStmt() {
			return getRuleContext(IfStmtContext.class,0);
		}
		public WhileStmtContext whileStmt() {
			return getRuleContext(WhileStmtContext.class,0);
		}
		public SwitchStmtContext switchStmt() {
			return getRuleContext(SwitchStmtContext.class,0);
		}
		public AssignStmtContext assignStmt() {
			return getRuleContext(AssignStmtContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YuriListener ) ((YuriListener)listener).enterStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YuriListener ) ((YuriListener)listener).exitStmt(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stmt);
		try {
			setState(63);
			switch (_input.LA(1)) {
			case INT:
			case FLOAT:
			case CHAR:
			case STRING:
			case NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(58); assignStmt();
				}
				break;
			case IFINIT:
				enterOuterAlt(_localctx, 2);
				{
				setState(59); ifStmt();
				}
				break;
			case WHILEINIT:
				enterOuterAlt(_localctx, 3);
				{
				setState(60); whileStmt();
				}
				break;
			case FORINIT:
				enterOuterAlt(_localctx, 4);
				{
				setState(61); forStmt();
				}
				break;
			case SWITCHINIT:
				enterOuterAlt(_localctx, 5);
				{
				setState(62); switchStmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignStmtContext extends ParserRuleContext {
		public TerminalNode DOT() { return getToken(YuriParser.DOT, 0); }
		public VarTypeContext varType() {
			return getRuleContext(VarTypeContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode NAME() { return getToken(YuriParser.NAME, 0); }
		public TerminalNode EQ() { return getToken(YuriParser.EQ, 0); }
		public TerminalNode GLOBAL() { return getToken(YuriParser.GLOBAL, 0); }
		public AssignStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YuriListener ) ((YuriListener)listener).enterAssignStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YuriListener ) ((YuriListener)listener).exitAssignStmt(this);
		}
	}

	public final AssignStmtContext assignStmt() throws RecognitionException {
		AssignStmtContext _localctx = new AssignStmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assignStmt);
		try {
			setState(83);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(65); varType();
				setState(66); match(NAME);
				setState(67); match(EQ);
				setState(68); expr();
				setState(69); match(DOT);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(71); varType();
				setState(72); match(GLOBAL);
				setState(73); match(NAME);
				setState(74); match(EQ);
				setState(75); expr();
				setState(76); match(DOT);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(78); match(NAME);
				setState(79); match(EQ);
				setState(80); expr();
				setState(81); match(DOT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclareStmtContext extends ParserRuleContext {
		public TerminalNode DOT() { return getToken(YuriParser.DOT, 0); }
		public VarTypeContext varType() {
			return getRuleContext(VarTypeContext.class,0);
		}
		public TerminalNode NAME() { return getToken(YuriParser.NAME, 0); }
		public DeclareStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declareStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YuriListener ) ((YuriListener)listener).enterDeclareStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YuriListener ) ((YuriListener)listener).exitDeclareStmt(this);
		}
	}

	public final DeclareStmtContext declareStmt() throws RecognitionException {
		DeclareStmtContext _localctx = new DeclareStmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declareStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85); varType();
			setState(86); match(NAME);
			setState(87); match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarTypeContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(YuriParser.STRING, 0); }
		public TerminalNode CHAR() { return getToken(YuriParser.CHAR, 0); }
		public TerminalNode INT() { return getToken(YuriParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(YuriParser.FLOAT, 0); }
		public VarTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YuriListener ) ((YuriListener)listener).enterVarType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YuriListener ) ((YuriListener)listener).exitVarType(this);
		}
	}

	public final VarTypeContext varType() throws RecognitionException {
		VarTypeContext _localctx = new VarTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_varType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << CHAR) | (1L << STRING))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ArithExprContext arithExpr() {
			return getRuleContext(ArithExprContext.class,0);
		}
		public CallExprContext callExpr() {
			return getRuleContext(CallExprContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YuriListener ) ((YuriListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YuriListener ) ((YuriListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_expr);
		try {
			setState(93);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(91); arithExpr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(92); callExpr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CallExprContext extends ParserRuleContext {
		public ExprListContext exprList() {
			return getRuleContext(ExprListContext.class,0);
		}
		public TerminalNode NAME() { return getToken(YuriParser.NAME, 0); }
		public TerminalNode OPENPAR() { return getToken(YuriParser.OPENPAR, 0); }
		public TerminalNode CLOSEPAR() { return getToken(YuriParser.CLOSEPAR, 0); }
		public CallExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_callExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YuriListener ) ((YuriListener)listener).enterCallExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YuriListener ) ((YuriListener)listener).exitCallExpr(this);
		}
	}

	public final CallExprContext callExpr() throws RecognitionException {
		CallExprContext _localctx = new CallExprContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_callExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95); match(NAME);
			setState(96); match(OPENPAR);
			setState(97); exprList();
			setState(98); match(CLOSEPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArithExprContext extends ParserRuleContext {
		public TerminalNode NAME(int i) {
			return getToken(YuriParser.NAME, i);
		}
		public List<TerminalNode> NAME() { return getTokens(YuriParser.NAME); }
		public ArithSymbolsContext arithSymbols() {
			return getRuleContext(ArithSymbolsContext.class,0);
		}
		public ArithExprContext arithExpr() {
			return getRuleContext(ArithExprContext.class,0);
		}
		public ArithExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arithExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YuriListener ) ((YuriListener)listener).enterArithExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YuriListener ) ((YuriListener)listener).exitArithExpr(this);
		}
	}

	public final ArithExprContext arithExpr() throws RecognitionException {
		ArithExprContext _localctx = new ArithExprContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_arithExpr);
		try {
			setState(108);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(100); match(NAME);
				setState(101); arithSymbols();
				setState(102); arithExpr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(104); match(NAME);
				setState(105); arithSymbols();
				setState(106); match(NAME);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprCondContext extends ParserRuleContext {
		public TerminalNode NOT() { return getToken(YuriParser.NOT, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprCondContext exprCond() {
			return getRuleContext(ExprCondContext.class,0);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode OPENPAR() { return getToken(YuriParser.OPENPAR, 0); }
		public TerminalNode CLOSEPAR() { return getToken(YuriParser.CLOSEPAR, 0); }
		public TerminalNode AND() { return getToken(YuriParser.AND, 0); }
		public CompareSymbolsContext compareSymbols() {
			return getRuleContext(CompareSymbolsContext.class,0);
		}
		public TerminalNode OR() { return getToken(YuriParser.OR, 0); }
		public ExprCondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprCond; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YuriListener ) ((YuriListener)listener).enterExprCond(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YuriListener ) ((YuriListener)listener).exitExprCond(this);
		}
	}

	public final ExprCondContext exprCond() throws RecognitionException {
		ExprCondContext _localctx = new ExprCondContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_exprCond);
		int _la;
		try {
			setState(131);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(110); expr();
				setState(111); compareSymbols();
				setState(112); exprCond();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				_la = _input.LA(1);
				if ( !(_la==AND || _la==OR) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(116);
				_la = _input.LA(1);
				if (_la==OPENPAR) {
					{
					setState(115); match(OPENPAR);
					}
				}

				setState(118); exprCond();
				setState(120);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(119); match(CLOSEPAR);
					}
					break;
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(122); match(NOT);
				setState(123); match(OPENPAR);
				setState(124); exprCond();
				setState(125); match(CLOSEPAR);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(127); expr();
				setState(128); compareSymbols();
				setState(129); expr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprListContext extends ParserRuleContext {
		public ExprListEndContext exprListEnd() {
			return getRuleContext(ExprListEndContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ExprListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YuriListener ) ((YuriListener)listener).enterExprList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YuriListener ) ((YuriListener)listener).exitExprList(this);
		}
	}

	public final ExprListContext exprList() throws RecognitionException {
		ExprListContext _localctx = new ExprListContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_exprList);
		try {
			setState(137);
			switch (_input.LA(1)) {
			case NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(133); expr();
				setState(134); exprListEnd();
				}
				break;
			case CLOSEPAR:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprListEndContext extends ParserRuleContext {
		public ExprListEndContext exprListEnd() {
			return getRuleContext(ExprListEndContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(YuriParser.COMMA, 0); }
		public ExprListEndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprListEnd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YuriListener ) ((YuriListener)listener).enterExprListEnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YuriListener ) ((YuriListener)listener).exitExprListEnd(this);
		}
	}

	public final ExprListEndContext exprListEnd() throws RecognitionException {
		ExprListEndContext _localctx = new ExprListEndContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_exprListEnd);
		try {
			setState(144);
			switch (_input.LA(1)) {
			case COMMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(139); match(COMMA);
				setState(140); expr();
				setState(141); exprListEnd();
				}
				break;
			case CLOSEPAR:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStmtContext extends ParserRuleContext {
		public TerminalNode IFEND() { return getToken(YuriParser.IFEND, 0); }
		public TerminalNode IFINIT() { return getToken(YuriParser.IFINIT, 0); }
		public ExprCondContext exprCond() {
			return getRuleContext(ExprCondContext.class,0);
		}
		public TerminalNode OPENPAR() { return getToken(YuriParser.OPENPAR, 0); }
		public ElseStmtContext elseStmt() {
			return getRuleContext(ElseStmtContext.class,0);
		}
		public TerminalNode CLOSEPAR() { return getToken(YuriParser.CLOSEPAR, 0); }
		public TerminalNode THEN() { return getToken(YuriParser.THEN, 0); }
		public StmtListContext stmtList() {
			return getRuleContext(StmtListContext.class,0);
		}
		public IfStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YuriListener ) ((YuriListener)listener).enterIfStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YuriListener ) ((YuriListener)listener).exitIfStmt(this);
		}
	}

	public final IfStmtContext ifStmt() throws RecognitionException {
		IfStmtContext _localctx = new IfStmtContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_ifStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146); match(IFINIT);
			setState(147); match(OPENPAR);
			setState(148); exprCond();
			setState(149); match(CLOSEPAR);
			setState(150); match(THEN);
			setState(151); stmtList();
			setState(152); elseStmt();
			setState(153); match(IFEND);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElseStmtContext extends ParserRuleContext {
		public TerminalNode ELSE() { return getToken(YuriParser.ELSE, 0); }
		public StmtListContext stmtList() {
			return getRuleContext(StmtListContext.class,0);
		}
		public ElseStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YuriListener ) ((YuriListener)listener).enterElseStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YuriListener ) ((YuriListener)listener).exitElseStmt(this);
		}
	}

	public final ElseStmtContext elseStmt() throws RecognitionException {
		ElseStmtContext _localctx = new ElseStmtContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_elseStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155); match(ELSE);
			setState(156); stmtList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
